--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .special_underline {
+    border-bottom-width: 0;
+    background-image: linear-gradient(transparent, transparent),
+      linear-gradient(#fff, #fff);
+    background-size: 0 3px;
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    transition: 0.5s ease-in-out;
+  }
+
+  .special_underline {
+    background-image: linear-gradient(transparent, transparent),
+      linear-gradient(red, red);
+  }
+
+  .special_underline:hover {
+    background-size: 100% 4px;
+    background-position: 0 100%;
+  }
+
+  .footer {
+    @apply flex flex-col gap-5 max-md:border max-md:border-x-0 max-md:border-t-0;
+  }
+
+  .footer_headings {
+    @apply text-red text-4xl font-bold;
+  }
+
+  .footer_links {
+    @apply font-bold text-sm hover:underline hover:text-red;
   }
 }
